--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
 .DS_Store
 node_modules/
 dist/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-package-lock.json
-
-# Editor directories and files
+npm-debug.log
 .idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
